--- a/src/main/resources/static/css/inicio.css
+++ b/src/main/resources/static/css/inicio.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&family=Nunito:ital,wght@0,200..1000;1,200..1000&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
@@ -8,13 +8,12 @@
     font-family: 'Nunito', sans-serif;
 }
 
-body{
+body {
     margin-left: 20px; /* Reduzca el margen izquierdo */
     transition: margin-left 300ms cubic-bezier(0.085, 0.135, 0.15, 0.86);
-    
 }
 
-header{
+header {
     width: 100%;
     height: 80px;
     background: #27374D;
@@ -30,12 +29,12 @@ header{
     margin-left: 50px; /* Ajusta el margen izquierdo */
 }
 
-.show_title{
+.show_title {
     color: #DDE6ED;
     display: none;
 }
 
-.menu__side{
+.menu__side {
     width: 60px; /* Reduce el ancho del menú lateral */
     height: 100%;
     background: #27374D;
@@ -50,23 +49,23 @@ header{
     transition: all 300ms cubic-bezier(0.085, 0.135, 0.15, 0.86);
 }
 
-.name__page{
+.name__page {
     padding: 20px; /* Ajusta el espaciado */
     margin-top: 0; /* Elimina el margen superior */
 }
 
-.name__page i{
+.name__page i {
     width: 20px;    
     margin-right: 20px;
 }
 
-.options__menu{
+.options__menu {
     padding: 10px 20px; /* Ajusta el espaciado */
     position: absolute;
     top: 60px; /* Ajusta la posición vertical */
 }
 
-.options__menu a{
+.options__menu a {
     color: #DDE6ED;
     cursor: default;
     display: block;
@@ -74,47 +73,65 @@ header{
     transition: color 300ms;
 }
 
-.options__menu a:hover{
+.options__menu a:hover {
     color: #9DB2BF;
 }
 
-.options__menu .opcion{
+.options__menu .opcion {
     padding: 20px 0px;
     display: flex;
     align-items: center;
     position: relative;
 }
 
-.options__menu .opcion i{
+.options__menu .opcion i {
     width: 20px;
     margin-right: 20px;
     cursor: pointer;
 }
 
-.options__menu .opcion h4{
+.options__menu .opcion h4 {
     font-weight: 300;
     cursor: pointer;
 }
 
-a.selected{
+a.selected {
     color: #DDE6ED;
 }
 
-.body_move{
+.body_move {
     margin-left: 250px;
 }
 
-.menu__side__move{
+.menu__side__move {
     width: 250px;
 }
 
 @media screen and (max-width: 760px) {
-    .body_move{
+    .body_move {
         margin-left: 0px;
     }
-    .menu__side__move{
+    .menu__side__move {
         width: 80px;
         left: -80px;
+    }
+    .name__page {
+        padding: 10px; /* Ajusta el espaciado */
+    }
+    .options__menu {
+        display: none;
+    }
+    
+    /* Cambia la disposición de las tarjetas a vertical */
+    .tarjetas__container {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    /* Ajusta el margen izquierdo de las tarjetas */
+    .tarjeta {
+        margin-left: 0;
+        width: 100%;
     }
 }
 
