--- a/src/main/resources/static/css/instalaciones.css
+++ b/src/main/resources/static/css/instalaciones.css
@@ -13,6 +13,11 @@ body {
     transition: margin-left 300ms cubic-bezier(0.085, 0.135, 0.15, 0.86);
 }
 
+.col, .row{
+    border: solid black;
+    margin: 2px;
+}
+
 header {
     width: 100%;
     height: 80px;
@@ -123,14 +128,15 @@ a.selected {
 }
 
 .tarjeta-grande {
+    border: solid black;
     display: flex;
     align-items: flex-start; /* Alinea los elementos en la parte superior */
     padding: 20px;
     border-radius: 8px;
-    margin: 20px;
+    margin: 10px;
     margin-top: 100px; /* Agregar margen superior */
     background-color: #f9f9f9;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+
     position: relative;
 }
 
@@ -145,8 +151,8 @@ a.selected {
 }
 
 .contenido {
-    width: 50%; /* Ocupa la otra mitad del ancho de la tarjeta */
-    padding: 0 20px; /* Agrega un poco de espacio alrededor de los campos */
+    width: 100%; /* Ocupa la otra mitad del ancho de la tarjeta */
+    padding:20px; /* Agrega un poco de espacio alrededor de los campos */
 }
 
 .campo {
