--- a/src/main/resources/static/css/instalaciones.css
+++ b/src/main/resources/static/css/instalaciones.css
@@ -20,7 +20,7 @@ body {
 
 header {
     width: 100%;
-    height: 80px;
+    height: 50px;
     background: #27374D;
     display: flex;
     align-items: center;
@@ -31,7 +31,7 @@ header {
 
 #title_header {
     color: #DDE6ED;
-    margin-left: 50px;
+    margin-left: 40px;
 }
 
 .show_title {
@@ -113,9 +113,6 @@ a.selected {
 
 }
 
-
-
-
 @media screen and (max-width: 760px) {
     .body_move {
         margin-left: 0px;
@@ -134,16 +131,30 @@ a.selected {
     padding: 20px;
     border-radius: 8px;
     margin: 10px;
-    margin-top: 100px; /* Agregar margen superior */
     background-color: #f9f9f9;
+    position: absolute;
+    top: 0; /* Alinea la tarjeta en la parte superior de su contenedor */
+    width: calc(100% - 40px); /* Calcula el ancho de la tarjeta y resta el doble del padding */
+    left: 50px; /* Alinea la tarjeta a la izquierda del contenedor */
+    top: 40px;
+}
 
-    position: relative;
+
+.contenido {
+    width: calc(100% - 50px); /* Calcula el ancho de la tarjeta y resta el ancho del icono */
+    padding: 20px; /* Mantiene el padding */
+    border: none; /* Elimina el borde */
 }
 
 .icono-casa {
-    width: 50%; /* Ocupa la mitad del ancho de la tarjeta */
+    width: 50%;
     text-align: center;
-    margin-bottom: 20px; /* Agrega espacio debajo del icono de casa */
+}
+
+.input-file {
+    width: 50%;
+    text-align: center;
+    padding-left: 10px; /* Agrega un pequeño espacio entre el icono y el botón */
 }
 
 .icono-casa i {
@@ -244,8 +255,11 @@ textarea {
     height: auto; /* Mantén la proporción de la imagen */
 }
 
-
 .options__menu h4 {
     font-size: 18px; /* Cambia el tamaño de la letra para todos los elementos <h4> */
     border-bottom: none; /* Elimina la línea inferior */
+}
+
+#title_header h1 {
+    font-size: 28px; /* Cambia el tamaño del título h1 a 28px */
 }
