--- a/src/main/resources/static/css/reporteMantenimiento.css
+++ b/src/main/resources/static/css/reporteMantenimiento.css
@@ -40,7 +40,7 @@ body {
 header {
     width: 100%;
     height: 50px;
-    background: var(--color-primario);
+    background: #27374D;
     display: flex;
     align-items: center;
     position: fixed;
@@ -49,29 +49,29 @@ header {
 }
 
 #title_header {
-    color: var(--color-secundario);
-    margin-left: 40px;
-}
+    color: #DDE6ED;
+    margin-left: 50px; /* Ajusta el margen izquierdo */}
 
 .show_title {
-    color: var(--color-secundario);
+    color: #DDE6ED;
     display: none;
 }
 
 .menu__side {
-    width: 60px;
+    width: 60px; /* Reduce el ancho del menú lateral */
     height: 100%;
-    background: var(--color-primario);
+    background: #27374D;
     position: fixed;
     top: 0;
     left: 0;
-    color: var(--color-secundario);
+    color: #DDE6ED;
     font-size: 18px;
     z-index: 300;
-    overflow: hidden;
-    border-right: 20px solid var(--color-primario);
+    overflow: hidden; 
+    border-right: 20px solid #27374D;
     transition: all 300ms cubic-bezier(0.085, 0.135, 0.15, 0.86);
 }
+
 
 .name__page {
     padding: 20px;
@@ -200,8 +200,8 @@ textarea {
 
 .profile-icon {
     position: absolute;
-    top: 20px;
-    right: 50px;
+    top: 12px;
+    right: 30px;
     color: var(--color-secundario);
     cursor: pointer;
     font-size: 24px;
