--- a/src/main/resources/static/css/reporteMantenimiento.css
+++ b/src/main/resources/static/css/reporteMantenimiento.css
@@ -194,6 +194,26 @@ textarea {
     transition: background-color 0.3s;
 }
 
+
+
+#body .btn-primary {
+    background-color: #526D82; /* Color de fondo del botón */
+    border-color: #526D82; /* Color del borde del botón */
+}
+
+#body .btn-primary:hover {
+    background-color: #9DB2BF; /* Color de fondo del botón al pasar el mouse */
+    border-color: #9DB2BF; /* Color del borde del botón al pasar el mouse */
+}
+
+#body .form-control {
+    background-color: #ffff; /* Color de fondo del campo de entrada */
+    color: #27374D; /* Color de texto del campo de entrada */
+}
+
+
+
+
 .botones button:hover {
     background-color: var(--color-boton-hover);
 }
