--- a/src/main/resources/static/css/activos.css
+++ b/src/main/resources/static/css/activos.css
@@ -228,3 +228,12 @@ textarea {
 .profile-options li a:hover {
     color: #dc3545; /* Cambia el color al pasar el ratón por encima */
 }
+.notification-icon {
+    position: absolute;
+    top: 12px;
+    right: 70px; /* Ajusta la posición horizontal del ícono de notificación */
+    color: #DDE6ED;
+    cursor: pointer;
+    font-size: 26px; /* Tamaño del ícono de notificación */
+    right: 150px;
+}
