--- a/src/main/resources/static/css/instalaciones.css
+++ b/src/main/resources/static/css/instalaciones.css
@@ -267,3 +267,12 @@ textarea {
 .form-control-user {
     color: black;
 }   
+.notification-icon {
+    position: absolute;
+    top: 12px;
+    right: 70px; /* Ajusta la posición horizontal del ícono de notificación */
+    color: #DDE6ED;
+    cursor: pointer;
+    font-size: 26px; /* Tamaño del ícono de notificación */
+    right: 150px;
+}
